clean up node commands

--- a/src/index.njk
+++ b/src/index.njk
@@ -28,7 +28,7 @@ og-data:
     </style>
   </head>
 
-  <body class="bg-white">
+  <body class="bg-slate-200">
     {% svgsprite %}
 
     <div class="container max-w-sm mx-auto">
